--- a/Test.html
+++ b/Test.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<p>Click the button keyin inputs .</p>
+<p>Trykk for å skrive.</p>
 
-<button onclick="myFunction()">Try it</button>
+<button onclick="myFunction()">Klikk her</button>
 
 <p id="a"></p>
 <p id="p"></p>
